Revision history for Perl extension ExtUtils::CBuilder.

0.23 - Sat Apr 19 22:28:03 2008

 - Fixed some problems (some old, some new) with Strawberry Perl on
   Windows. [Alberto Simo~es]

 - Will now install in the core perl lib directory when the user's
   perl is new enough to have us in core. [Yi Ma Mao]

0.22 - Fri Feb  8 21:52:21 2008

 - Replaced the split_like_shell() method on Windows with a
   near-no-op, which is probably more correct and has the benefit of
   not messing up UNC paths. [John R. LoVerso, see
   http://rt.cpan.org/Ticket/Display.html?id=26545]

 - Fixed extra_compiler_flags on Windows, they were being
   ignored. [Robert May]

0.21 - Tue Oct 30 06:46:01 2007

 - Clean up perl_src path using Cwd::realpath().  Only affects usage
   as part of the perl core.

 - Protect $., $@, $!, $^E, and $? from any clobbering that might
   occur in our DESTROY method. [Zefram]

 - From bleadperl, a patch to clean up debug symbol files (.pdb for
   VC++, .tds for BCC) when running have_compiler(). [Steve Hay &
   Steve Peters]

0.19 - Sun May 13 14:29:18 2007

 - When building as part of the perl core (so this is irrelevant for
   people downloading from CPAN) we now try a little harder to find
   the perl sources. [Jos Boumans]

 - Fixed a part of the manifest thingy that got broken on 64-bit
   Windows platforms in version 0.18. [Steve Hay, Jan Dubois]

0.18 - Mon Mar 26 21:29:09 2007

 - Various OS/2 fixes:
   + Put .LIB file near .DEF file
   + Got library-file building working better
   + Handled libperl_overrides better
   [Ilya Zakharevich]

 - On Windows: embed manifest files in DLLs built with Module-Build
   when using VC8. [Steve Hay]

 - Added a workaround for a config error on dec_osf: the linker is
   $Config{cc}, not $Config{ld}. [Jarkko Hietaniemi]

 - Borland's compiler "response files" will not pass through macro
   definitions that contain quotes. The quotes get stripped and there